--- a/LiDARGO/docs/_toc.yml
+++ b/LiDARGO/docs/_toc.yml
@@ -4,6 +4,6 @@
 format: jb-book
 root: intro
 chapters:
-- file: markdown
-- file: notebooks
-- file: markdown-notebooks
+- file: LIDARGO_format
+# - file: LiDARGO_standardize
+# - file: LiDARGO_statistics
