--- a/LiDARGO/docs/_config.yml
+++ b/LiDARGO/docs/_config.yml
@@ -17,7 +17,10 @@ latex:
 
 # Add a bibtex file so that we can create citations
 bibtex_bibfiles:
-  - references.bib
+  - bibliography.bib
+sphinx:
+  config:
+    bibtex_reference_style: author_year
 
 # Information about where the book exists on the web
 repository:
