written standardize docs

--- a/lidargo/docs/_toc.yml
+++ b/lidargo/docs/_toc.yml
@@ -3,11 +3,20 @@
 
 format: jb-book
 root: intro
-chapters:
-- file: format
-- file: standardize
-  sections: 
-  - file: standardize_prec
-  # - file: LiDARGO_standardize_restr
-  # - file: LiDARGO_standardize_qc
-- file: statistics
+
+parts:
+- caption: Getting started
+  chapters:
+  - file: gettingStarted
+- caption: Methods
+  chapters:
+  - file: format
+  - file: standardize
+    sections: 
+    - file: standardize_prec
+    - file: standardize_qc
+    - file: standardize_restr
+  - file: statistics
+- caption: Examples
+  chapters:
+  - file: example1
